Попытка пройти тесты после рефакторинга