@@ -1,28 +1,25 @@
 package ru.practicum.compilation.service;
 
+import com.querydsl.core.types.dsl.BooleanExpression;
 import lombok.RequiredArgsConstructor;
 import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
+import ru.practicum.compilation.model.GetCompilationsParam;
+import ru.practicum.compilation.model.QCompilation;
+import ru.practicum.events.model.QEvent;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.dto.compilation.CompilationDto;
 import ru.practicum.dto.compilation.NewCompilationDto;
 import ru.practicum.dto.compilation.UpdateCompilationRequest;
-import ru.practicum.dto.events.EventShortDto;
-import ru.practicum.dto.user.UserShortDto;
 import ru.practicum.compilation.mapper.CompilationMapper;
 import ru.practicum.compilation.model.Compilation;
 import ru.practicum.compilation.repository.CompilationRepository;
-import ru.practicum.events.mapper.EventMapper;
 import ru.practicum.events.model.Event;
 import ru.practicum.events.repository.EventRepository;
-import ru.practicum.exception.ConflictException;
 import ru.practicum.exception.NotFoundException;
-import ru.practicum.feign.client.UserFeignClient;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -31,23 +28,18 @@ public class CompilationServiceImpl implements CompilationService {
 
     private final CompilationRepository compilationRepository;
     private final EventRepository eventRepository;
-    private final UserFeignClient userFeignClient;  // Добавляем UserFeignClient
+    private final CompilationMapper compilationMapper;
 
     @Override
-    public List<CompilationDto> getCompilations(Boolean pinned, Integer from, Integer size) {
-        int page = from / size;
-        Pageable pageable = PageRequest.of(page, size);
+    public List<CompilationDto> getCompilations(GetCompilationsParam param) {
+        QCompilation qCompilation = QCompilation.compilation;
+        BooleanExpression pinnedExpression = qCompilation.pinned.eq(param.getPinned());
 
-        List<Compilation> compilations;
-        if (pinned != null) {
-            compilations = compilationRepository.findByPinned(pinned, pageable);
-        } else {
-            compilations = compilationRepository.findAll(pageable).getContent();
-        }
-
+        List<Compilation> compilations =
+                compilationRepository.findAll(pinnedExpression, param.getPageable()).getContent();
         return compilations.stream()
-                .map(this::toDtoWithEvents)
-                .collect(Collectors.toList());
+                .map(compilationMapper::toCompilationDto)
+                .toList();
     }
 
     @Override
@@ -55,24 +47,17 @@ public class CompilationServiceImpl implements CompilationService {
         Compilation compilation = compilationRepository.findById(compId)
                 .orElseThrow(() -> new NotFoundException("Подборка с id = " + compId + " не найдена"));
 
-        return toDtoWithEvents(compilation);
+        return compilationMapper.toCompilationDto(compilation);
     }
 
     @Override
     @Transactional
     public CompilationDto createCompilation(NewCompilationDto newCompilationDto) {
-        if (compilationRepository.existsByTitle(newCompilationDto.getTitle())) {
-            throw new ConflictException("Подборка с наименованием " + newCompilationDto.getTitle() + " уже существует");
-        }
-        Compilation compilation = CompilationMapper.toEntity(newCompilationDto);
-
-        if (newCompilationDto.getEvents() != null && !newCompilationDto.getEvents().isEmpty()) {
-            Set<Event> events = new HashSet<>(eventRepository.findAllById(newCompilationDto.getEvents()));
-            compilation.setEvents(events);
-        }
-
-        Compilation savedCompilation = compilationRepository.save(compilation);
-        return toDtoWithEvents(savedCompilation);
+        Compilation compilation = compilationMapper.toCompilation(newCompilationDto);
+        Set<Event> events = eventRepository.findByIdIn(newCompilationDto.getEvents());
+        compilation.setEvents(events);
+        compilationRepository.save(compilation);
+        return compilationMapper.toCompilationDto(compilation);
     }
 
     @Override
@@ -89,58 +74,32 @@ public class CompilationServiceImpl implements CompilationService {
     @Transactional
     public CompilationDto updateCompilation(Long compId, UpdateCompilationRequest updateCompilationRequest) {
         Compilation compilation = compilationRepository.findById(compId)
-                .orElseThrow(() -> new NotFoundException("Подборка с id = " + compId + " не найдена"));
+                .orElseThrow(() -> new NotFoundException("Подборка с eventId = " + compId + " не найдена"));
 
-        if (updateCompilationRequest.getTitle() != null && !updateCompilationRequest.getTitle().isBlank()) {
-            if (!compilation.getTitle().equals(updateCompilationRequest.getTitle()) &&
-                    compilationRepository.existsByTitle(updateCompilationRequest.getTitle())) {
-                throw new ConflictException("Подборка с наименованием " + updateCompilationRequest.getTitle() + " уже существует");
+        if (updateCompilationRequest.hasEvents()) {
+            QEvent qEvent = QEvent.event;
+            BooleanExpression idsExpression = qEvent.id.in(updateCompilationRequest.getEvents());
+            Iterable<Event> eventsInDb = eventRepository.findAll(idsExpression);
+
+            long sizeEventsInDb = Stream.of(eventsInDb).count();
+
+            if (updateCompilationRequest.getEvents().size() != sizeEventsInDb) {
+                throw new NotFoundException("Одно или более событий включенных в подборку не существует");
             }
+
+            compilation.getEvents().clear();
+            eventsInDb.forEach(compilation.getEvents()::add);
+        }
+
+        if (updateCompilationRequest.hasTitle()
+                && !compilation.getTitle().equals(updateCompilationRequest.getTitle())) {
             compilation.setTitle(updateCompilationRequest.getTitle());
         }
 
-        if (updateCompilationRequest.getPinned() != null) {
+        if (updateCompilationRequest.hasPinned()
+                && !compilation.getPinned().equals(updateCompilationRequest.getPinned())) {
             compilation.setPinned(updateCompilationRequest.getPinned());
         }
-
-        if (updateCompilationRequest.getEvents() != null) {
-            if (updateCompilationRequest.getEvents().isEmpty()) {
-                compilation.getEvents().clear();
-            } else {
-                List<Event> foundEvents = eventRepository.findAllById(updateCompilationRequest.getEvents());
-
-                if (foundEvents.size() != updateCompilationRequest.getEvents().size()) {
-                    throw new NotFoundException("Некоторые события не найдены");
-                }
-                compilation.setEvents(new HashSet<>(foundEvents));
-            }
-        }
-
-        return toDtoWithEvents(compilation);
-    }
-
-    private CompilationDto toDtoWithEvents(Compilation compilation) {
-        List<EventShortDto> eventShortDtos = new ArrayList<>();
-
-        if (compilation.getEvents() != null && !compilation.getEvents().isEmpty()) {
-            eventShortDtos = compilation.getEvents().stream()
-                    .map(this::mapEventToShortDto)
-                    .collect(Collectors.toList());
-        }
-
-        return CompilationMapper.toDto(compilation, eventShortDtos);
-    }
-
-    private EventShortDto mapEventToShortDto(Event event) {
-        UserShortDto initiator = getUserShortDto(event.getInitiatorId());
-        return EventMapper.toEventShortDto(event, initiator);
-    }
-
-    private UserShortDto getUserShortDto(Long userId) {
-        try {
-            return userFeignClient.getUserByIdShort(userId);
-        } catch (Exception e) {
-            return null;
-        }
+        return compilationMapper.toCompilationDto(compilation);
     }
 }
